deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eksweb
  namespace: web-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eksweb
  template:
    metadata:
      labels:
        app: eksweb
    spec:
      serviceAccountName: web-app-sa
      containers:
      - name: eksweb
        image: oxfordfun/eksweb:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: eksweb-service
  namespace: web-apps
spec:
  type: ClusterIP
  selector:
    app: eksweb
  ports:
  - port: 80
    targetPort: 5000
